infraestructure/Networking/internet_gw.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "${var.project_name}_IGW"
  }
}
